--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -354,12 +354,13 @@ div.fullscreen-topic-edit {
           font-weight: 400;
           font-size: 18px;
           line-height: 1.8;
+          margin-top: 0px;
         }
       }
     }
   }
 
-  button.remove-button {
+  button.archive-button {
     float: left;
     position: fixed;
     bottom: 20px;
@@ -367,6 +368,9 @@ div.fullscreen-topic-edit {
     opacity: 1;
     color: rgba(78,90,107,0.8);
     border: 1px solid rgba(78,90,107,0.8);
+    width: 240px;
+    height: 30px;
+    transition: none;
 
     &:hover {
       color: rgba(78,90,107,1);
@@ -384,6 +388,9 @@ div.fullscreen-topic-edit {
     opacity: 1;
     color: rgba(78,90,107,0.8);
     border: 1px solid rgba(78,90,107,0.8);
+    width: 100px;
+    height: 30px;
+    transition: none;
 
     &:hover {
       color: rgba(78,90,107,1);
@@ -396,9 +403,8 @@ div.fullscreen-topic-edit {
     }
   }
 
-  button.close-editing {
+  button.cancel-button {
     cursor: pointer;
-    height: 32px;
     position: fixed;
     right: 20px;
     bottom: 20px;
@@ -406,6 +412,9 @@ div.fullscreen-topic-edit {
     opacity: 1;
     color: rgba(78,90,107,0.8);
     border: 1px solid rgba(78,90,107,0.8);
+    width: 120px;
+    height: 30px;
+    transition: none;
 
     &:hover {
       color: rgba(78,90,107,1);
