--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -23,7 +23,7 @@ div.topic {
   margin: 0px;
   padding: 0px;
   height: 100%;
-  background-color: #FCFCFC;
+  background-color: $oc_white;
   border-radius: 2px;
   text-align: left;
   border: 0px solid transparent;
