--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -16,7 +16,7 @@ $oc_blue_light: #007A9D;
 // Grays
 $oc_gray_0: #FEFEFE;
 $oc_gray_1: #F1F1F1;
-$oc_gray_6: #E0E0E0;
+$oc_gray_6: #F0F0F0; // Modified to be brighter
 $oc_gray_2: #D8D8D8;
 $oc_gray_3: #8B8A8A;
 $oc_gray_4: #5B5B5B;
