add oc color classes

--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -18,3 +18,109 @@
 .black {
   color: $oc_black;
 }
+
+.oc-yellow {
+  color: $oc_yellow;
+}
+
+.oc-gray {
+  color: $oc_gray;
+}
+
+.oc-green {
+  color: $oc_green;
+}
+.oc-red {
+  color: $oc_red;
+}
+
+.oc-blue{
+  color: $oc_blue;
+}
+
+.oc-black{
+  color: $oc_black;
+}
+
+.oc-white{
+  color: $oc_white;
+}
+
+// greens
+
+.oc-green-dark {
+  color: $oc_green_dark;
+}
+
+.oc-green-regular{
+  color: $oc_green_regular;
+}
+
+.oc-green-light{
+  colro: $oc_green_light;
+}
+
+// blues
+.oc-blue-dark {
+  color: $oc_blue_dark;
+}
+
+.oc-blue-regular{
+  color: $oc_blue_regular;
+}
+
+.oc-blue-light{
+  color: $oc_blue_light;
+}
+
+// Grays
+
+.oc-gray-0{
+  color: $oc_gray_0;
+}
+
+.oc-gray-1{
+  color: $oc_gray_1;
+}
+
+.oc-gray-2{
+  color: $oc_gray_2;
+}
+
+.oc-gray-3{
+  color: $oc_gray_3;
+}
+
+.oc-gray-4{
+  color: $oc_gray_4;
+}
+
+.oc-gray-5{
+  color: $oc_gray_5;
+}
+
+.oc-gray-6{
+  color: $oc_gray_6;
+}
+
+// Reds
+
+.oc-red-dark{
+  color: $oc_red_dark;
+}
+
+.oc-red-regular{
+  color: $oc_red_regular;
+}
+
+.oc-red-light{
+  color: $oc_red_light;
+}
+
+.oc-new-chart-blue{
+  color: $oc_new_chart_blue;
+}
+
+.oc-new-chart-green{
+  color: $oc_new_chart_green;
+}
