--- a/scss/partials/_loading.scss
+++ b/scss/partials/_loading.scss
@@ -12,17 +12,13 @@ div.oc-loading {
     display: inline;
   }
 
-  div.oc-loading-internal {
-    background: url("/img/loading.gif") no-repeat;
-    background-size: 64px 64px;
-    width: 64px;
-    height: 64px;
+  i.fa.fa-circle-o-notch {
+    font-size: 64px;
     position: relative;
     top: 50%;
     left: 50%;
     margin-left: -32px;
     margin-top: -32px;
-
-    @include image-2x("/img/loading@2x.gif", 64px, 64px);
+    color: $oc_yellow;
   }
 }
