--- a/scss/partials/_su_preview_dialog.scss
+++ b/scss/partials/_su_preview_dialog.scss
@@ -17,5 +17,23 @@ div.su-preview-dialog {
     border-radius: 2px;
     background-color: #fcfcfc;
     box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
+
+    .circle35 {
+      border: 1px solid rgba(78, 90, 107, 0.5);
+      width: 35px;
+      height: 35px;
+      border-radius: 17.5px;
+      background-color: white;
+
+      & > img {
+        margin-top: 6px;
+        margin-left: 1px;
+      }
+
+      & > div.svg-icon {
+        margin-top: 7px;
+        margin-left: 7px;
+      }
+    }
   }
 }
