--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -14,6 +14,10 @@ ul#menu {
   background: $oc_gray_5;
   z-index: 10; /* Make sure the z-index is lower than the #page */
 
+  li {
+    opacity: 0.75;
+  }
+
   li.oc-title {
     color: white;
     font-size: 18px;
