use line-height instead of margin top and display block

--- a/scss/partials/_company_avatar.scss
+++ b/scss/partials/_company_avatar.scss
@@ -22,8 +22,7 @@ div.company-avatar {
       span.company-avatar-initial {
         font-size: 38px;
         color: $oc_gray_5;
-        display: block;
-        margin-top: -6px;
+        line-height: 1.1;
       }
     }
 
