--- a/scss/partials/_list_companies.scss
+++ b/scss/partials/_list_companies.scss
@@ -40,6 +40,11 @@ div.list-companies {
             margin-left: 10px;
           }
 
+          span.company-logo{
+            font-size: 24px;
+            line-height: 0.7;
+          }
+
           span {
             margin-left: 10px;
           }
