--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -142,7 +142,7 @@ div.topic {
       div.topic-title {
         padding-top: 12px;
         opacity: 0.5;
-        font-size: 12px;
+        font-size: 13px;
         line-height: 1.5;
         letter-spacing: 1px;
         color: $oc_gray_5;
@@ -154,7 +154,7 @@ div.topic {
       div.topic-headline-inner {
         padding-top: 15px;
         font-size: 20px;
-        line-height: 1.2;
+        line-height: 25px;
         color: $oc_gray_5;
 
         svg.emojione {
@@ -177,12 +177,12 @@ div.topic {
         color: $oc_gray_5;
         overflow: hidden;
         cursor: pointer;
-        font-size: 12px;
-        line-height: 1.3;
+        font-size: 15px;
+        line-height: 22px;
 
         svg.emojione {
-          width: 12px;
-          height: 12px;
+          width: 15px;
+          height: 15px;
         }
 
         *{
@@ -190,6 +190,10 @@ div.topic {
           font-weight: 400;
           line-height: 1.3;
           cursor: pointer;
+        }
+
+        b{
+          font-weight: 700;
         }
 
         a {
@@ -212,7 +216,7 @@ div.topic {
       button.topic-read-more {
         opacity: 0.5;
         font-weight: 800;
-        font-size: 12px;
+        font-size: 13px;
         line-height: 1.5;
         letter-spacing: 1px;
         color: $oc_gray_5;
