--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -104,7 +104,7 @@ div.topic {
         opacity: 0.5;
         font-family: $oc_headers_font;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 13px;
         line-height: 1.5;
         letter-spacing: 1px;
         color: $oc_gray_5;
@@ -132,7 +132,7 @@ div.topic {
       div.topic-headline-inner {
         padding-top: 14px;
         font-size: 20px;
-        line-height: 1.2;
+        line-height: 25px;
         color: $oc_gray_5;
         outline: none;
         border: none;
@@ -172,8 +172,8 @@ div.topic {
         color: $oc_gray_5;
         overflow: hidden;
         font-weight: 400;
-        font-size: 12px;
-        line-height: 1.3;
+        font-size: 15px;
+        line-height: 22px;
         cursor: text;
         min-height: 20px;
 
@@ -187,14 +187,18 @@ div.topic {
         }
 
         svg.emojione {
-          width: 12px;
-          height: 12px;
+          width: 15px;
+          height: 15px;
         }
 
         *{
           font-weight: 400;
           font-size: 12px;
-          line-height: 1.3;
+          line-height: 22px;
+        }
+
+        b{
+          font-weight: 700;
         }
 
         a {
@@ -275,7 +279,7 @@ div.topic {
         button {
           margin-bottom: 5px;
           color: rgba(78, 90, 107, 0.5);
-          font-size: 18px;
+          font-size: 15px;
         }
 
         button.left {
