--- a/scss/partials/_su_preview_dialog.scss
+++ b/scss/partials/_su_preview_dialog.scss
@@ -18,21 +18,35 @@ div.su-preview-dialog {
     background-color: #fcfcfc;
     box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
 
-    .circle35 {
-      border: 1px solid rgba(78, 90, 107, 0.5);
-      width: 35px;
-      height: 35px;
-      border-radius: 17.5px;
-      background-color: white;
+    button {
 
-      & > img {
-        margin-top: 6px;
-        margin-left: 1px;
+      .circle50 {
+        border: 1px solid rgba(78, 90, 107, 0.5);
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+        background-color: white;
+
+        & > img {
+          margin-top: 14px;
+          margin-left: 1px;
+        }
+
+        & > div.svg-icon {
+          margin-top: 13px;
+          margin-left: 14px;
+        }
       }
 
-      & > div.svg-icon {
-        margin-top: 7px;
-        margin-left: 7px;
+      span {
+        margin-top: 18px;
+        opacity: 0.5;
+        font-family: $oc_headers_font;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        color: $oc_gray_5;
       }
     }
   }
