--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -186,9 +186,9 @@ div.topic {
         }
 
         *{
-          font-size: 12px;
+          font-size: 15px;
+          line-height: 22px;
           font-weight: 400;
-          line-height: 1.3;
           cursor: pointer;
         }
 
