remove floating buttons, save and cancel now are fixed at the top of the page and archive is fixed at the bottom

--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -360,8 +360,7 @@ div.fullscreen-topic-edit {
 
   button.archive-button {
     float: left;
-    position: fixed;
-    bottom: 20px;
+    margin-bottom: 20px;
     background-color: white;
     opacity: 1;
     color: rgba(78,90,107,0.8);
@@ -381,12 +380,9 @@ div.fullscreen-topic-edit {
 
   button.save-button {
     cursor: pointer;
-    position: fixed;
-    bottom: 20px;
     opacity: 1;
     color: rgba(78,90,107,0.8);
     border: 1px solid rgba(78,90,107,0.8);
-    width: 100px;
     height: 30px;
     transition: none;
 
@@ -403,14 +399,10 @@ div.fullscreen-topic-edit {
 
   button.cancel-button {
     cursor: pointer;
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
     background-color: white;
     opacity: 1;
     color: rgba(78,90,107,0.8);
     border: 1px solid rgba(78,90,107,0.8);
-    width: 120px;
     height: 30px;
     transition: none;
 
