move archive button to the right of the buttons in the white box, move save and cancel button on the left replacing the back to dashbaord buttons, fix some style issues with space above title and under the header image in FoCE and fullscreen topic (edit)

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -80,6 +80,7 @@ div.fullscreen-topic {
 
         div.topic-header-image {
           text-align: center;
+          margin-bottom: 15px;
 
           img {
             max-width: 490px;
