--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -171,7 +171,7 @@
   ol li:before {
       content: counter(item) ". ";
       counter-increment: item;
-      color: $oc_yellow;
+      color: $text_color;
   }
 
   img {
