--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -77,9 +77,7 @@ div.topic {
       button.topic-pencil-button {
         width: 30px;
         height: 30px;
-        position: absolute;
-        top: 5px;
-        right: 10px;
+        float: right;
         opacity: 0;
         transition: 230ms;
         color: rgba(78, 90, 107, 0.5);
@@ -149,6 +147,8 @@ div.topic {
         text-transform: uppercase;
         font-family: $oc_headers_font;
         font-weight: 700;
+        float: left;
+        width: 90%;
       }
 
       div.topic-headline-inner {
