fix pencil top margin

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -81,6 +81,7 @@ div.topic {
         opacity: 0;
         transition: 230ms;
         color: rgba(78, 90, 107, 0.5);
+        margin-top: 5px;
       }
 
       & > div{
