add success atom

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -8,7 +8,7 @@ $oc_white: #FCFCFC;
 // greens
 $oc_green_dark: #008C54;
 $oc_green_regular: #26C485;
-$oc_green_light: #74E0B4;
+$oc_green_light: #4DE249;
 // blues
 $oc_blue_dark: #003848;
 $oc_blue_regular: #004E64;
