add parameter to set the hide on click option for medium editor, hide on click for body editor on fullscreen edit, add callback to hide the placeholder when the user interact with the file upload IO

--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -363,6 +363,10 @@ div.fullscreen-topic-edit {
           font-size: 18px;
           margin-top: 0px;
         }
+
+        &.hide-placeholder:after{
+          display: none;
+        }
       }
     }
   }
