do not push placeholder down when there is tag elements but no text

--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -177,7 +177,7 @@ div.topic {
         font-size: 15px;
         line-height: 22px;
 
-        &:empty:after {
+        &:after {
           content: attr(placeholder);
           font-size: 15px;
           line-height: 22px;
