--- a/scss/partials/_list_companies.scss
+++ b/scss/partials/_list_companies.scss
@@ -9,11 +9,19 @@ body.animating div.list-companies div.page {
   }
 }
 
+body.small-footer {
+  div.list-companies {
+    div.navbar-offset {
+      min-height: calc(100vh - #{$navbar_height}px - #{$footer_small_height}px);
+    }
+  }
+}
+
 div.list-companies {
 
   div.navbar-offset {
     padding-top: 50px;
-    min-height: calc(100vh - #{$footer_height}px + 5px);
+    min-height: calc(100vh - #{$navbar_height}px - #{$footer_height}px);
 
     ul.companies {
       list-style-type: none;
