--- a/scss/partials/_list_companies.scss
+++ b/scss/partials/_list_companies.scss
@@ -12,7 +12,7 @@ body.animating div.list-companies div.page {
 body.small-footer {
   div.list-companies {
     div.navbar-offset {
-      min-height: calc(100vh - #{$navbar_height}px - #{$footer_small_height}px);
+      min-height: calc(100vh - #{$navbar_height}px - #{$footer_small_height}px + 1px);
     }
   }
 }
