--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -202,7 +202,7 @@ div.topic {
           font-weight: normal;
         }
 
-        img{
+        img:not(.emojione){
           display: none;
         }
 
