--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -23,6 +23,12 @@ div.fullscreen-topic-edit {
         height: 20px;
         padding: 0px 26px;
 
+        div.fullscreen-topic-emoji-picker{
+          button.emoji-button {
+            color: rgba(78, 90, 107, 0.5);
+          }
+        }
+
         div.char-count {
           width: 50px;
           height: 20px;
