add emoji picker style scss

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -65,3 +65,4 @@
 @import "partials/_login_required";
 @import "partials/_login";
 @import "partials/_add_topic";
+@import "partials/_emoji_picker";
