add emoji-picker to the email share

--- a/scss/partials/_su_preview_dialog.scss
+++ b/scss/partials/_su_preview_dialog.scss
@@ -18,7 +18,7 @@ div.su-preview-dialog {
     background-color: #fcfcfc;
     box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
 
-    div.slack-note:empty:after{
+    div.slack-note:empty:after, div.email-note:empty:after{
       content: attr(placeholder);
       display: block;
       color: $oc_gray_5;
