--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -209,7 +209,7 @@ div.topic {
           font-weight: normal;
         }
 
-        img{
+        img:not(.emojione){
           display: none;
         }
 
