--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -30,6 +30,10 @@ div.topic {
   box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
   position: relative;
 
+  &.no-foce {
+    opacity: 0.5;
+  }
+
   div.share-remove-container{
     width: 30px;
     height: 30px;
