Extended length message when the text (without html tags) inserted in the body exceeds 500 chars

--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -227,6 +227,7 @@ div.topic {
         div.topic-foce-footer-left {
           float: left;
           width: 15%;
+          height: 41px;
 
           label.char-counter {
             opacity: 0.5;
