move read more on the right, date attribution and revision navigation on the left, restyle date

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -72,12 +72,6 @@ div.topic {
         button.topic-pencil-button {
           opacity: 1;
         }
-
-        div.topic-attribution-container {
-          div.topic-navigation {
-            opacity: 1;
-          }
-        }
       }
 
       button.topic-pencil-button {
@@ -220,39 +214,43 @@ div.topic {
         }
       }
 
-      button.topic-read-more {
-        opacity: 0.5;
-        font-weight: 800;
-        font-size: 13px;
-        line-height: 1.5;
-        letter-spacing: 1px;
-        color: $oc_gray_5;
-        text-decoration: underline;
-        margin: 0px 20px 28px 20px;
-        padding: 0;
-      }
-
       div.topic-attribution-container {
         margin: 0px 20px 28px 0px;
 
-        div.topic-attribution {
-          font-family: $oc_main_font;
+        button.topic-read-more {
           opacity: 0.5;
+          font-weight: 800;
           font-size: 13px;
           line-height: 1.5;
           letter-spacing: 1px;
           color: $oc_gray_5;
-          font-weight: 400;
-          float: left;
+          text-decoration: underline;
+          float: right;
         }
 
         div.topic-navigation {
-          opacity: 0;
+          float: left;
+
+          div.topic-attribution {
+            font-family: $oc_headers_font;
+            float: left;
+            opacity: 0.5;
+            font-size: 13px;
+            line-height: 1.5;
+            letter-spacing: 1px;
+            color: $oc_gray_5;
+            font-weight: 700;
+            text-transform: uppercase;
+            padding-top: 1px;
+          }
+
           button.topic-navigation-button {
             background-color: transparent;
             color: rgba(78, 90, 107, 0.5);
             border: none;
             outline: none;
+            float: left;
+            margin-top: -2px;
           }
         }
       }
