pass flags instead of vars to date-string for year and short-month, fix bootstrap white-space and max-width rules

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -22,6 +22,11 @@ html, body {
   width: 100vw;
 }
 
+.tooltip-inner {
+  white-space:pre-wrap;
+  max-width: none;
+}
+
 div.fullscreen-page {
   position: relative;
   background-color: white;
