--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -81,7 +81,7 @@ div.fullscreen-topic {
           text-align: center;
 
           img {
-            max-width: 100%;
+            width: 100%;
             border-top-left-radius: 2px;
             border-top-right-radius: 2px;
           }
