add topic-read-more component, use it directly in topic when on su preview and su, use it inside topic attribution when in company dashboard

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -66,3 +66,4 @@
 @import "partials/_login";
 @import "partials/_add_topic";
 @import "partials/_topic_attribution";
+@import "partials/_topic_read_more";
