--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -21,6 +21,7 @@ $oc_gray_2: #D8D8D8;
 $oc_gray_3: #8B8A8A;
 $oc_gray_4: #5B5B5B;
 $oc_gray_5: #4E5A6B;
+$oc_gray_7: #0A0A0A;
 // Reds
 $oc_red_dark: #9E001A;
 $oc_red_regular: #D72A46;
